Removed Unused Parent
Parent is not needed for our simple analyzer, so i'm removing it.